# rules_scala

./: .bazelignore  .bazelrc  .bazelversion  .gitignore  .scalafmt.conf  MODULE.bazel  README.md  WORKSPACE  scala_config.bzl  test_dependency_versions.sh  test_intellij_aspect.sh  test_lint.sh  test_rules_scala.sh  test_thirdparty_version.sh  test_version.sh
.bazelci/: presubmit.yml
.bcr/: README.md  metadata.template.json  presubmit.yml
.github/workflows/: publish-to-bcr.yml  release.yml
docs/: phase_scalafmt.md  scala_toolchain.md
dt_patches/: dt_patch_test.sh
dt_patches/compiler_sources/: MODULE.bazel  WORKSPACE  extensions.bzl
dt_patches/test_dt_patches/: .bazelrc  BUILD  MODULE.bazel  WORKSPACE  extensions.bzl
dt_patches/test_dt_patches_user_srcjar/: .bazelrc  BUILD  MODULE.bazel  WORKSPACE  extensions.bzl
examples/crossbuild/: MODULE.bazel  WORKSPACE
examples/crossbuild/3_select/: BUILD
examples/overridden_artifacts/: MODULE.bazel  WORKSPACE
examples/scala3/: MODULE.bazel  WORKSPACE
examples/semanticdb/: BUILD  MODULE.bazel  WORKSPACE
examples/testing/multi_frameworks_toolchain/: .bazelrc  BUILD  MODULE.bazel  WORKSPACE
examples/testing/scalatest_repositories/: MODULE.bazel  WORKSPACE
examples/testing/specs2_junit_repositories/: MODULE.bazel  WORKSPACE
jmh/: BUILD  jmh.bzl
jmh/toolchain/: toolchain.bzl
junit/: junit.bzl
manual_test/coverage_local_jacocorunner/: BUILD
manual_test/scala_test_jacocorunner/: BUILD
manual_test/scala_test_jvm_flags/: BUILD
manual_test/scalac_jvm_opts/: BUILD
platform/: MODULE.bazel  WORKSPACE  deps.bzl
platform/linux_x64/: BUILD
platform/windows_x64/: BUILD
protoc/: BUILD  toolchains.bzl
protoc/private/: protoc_integrity.bzl  protoc_toolchain.bzl  protoc_toolchains.bzl
scala/: BUILD  artifacts.bzl  deps.bzl  latest_deps.bzl  protoc.bzl  protoc_deps.bzl  protoc_toolchain.bzl  scala_cross_version.bzl  scala_maven_import_external.bzl  scala_toolchain.bzl  toolchains.bzl  toolchains_repo.bzl
scala/extensions/: config.bzl  deps.bzl  protoc.bzl
scala/private/: common.bzl  common_attributes.bzl  default_scala_version.bzl  toolchain_defaults.bzl
scala/private/extensions/: dev_deps.bzl  test_deps.bzl  toolchains.bzl
scala/private/macros/: bzlmod.bzl  compiler_sources_integrity.bzl  scala_repositories.bzl  setup_scala_toolchain.bzl  stringify.bzl  toolchains.bzl  toolchains_repo.bzl  workspace_compat.bzl
scala/private/phases/: phase_compile.bzl  phase_declare_executable.bzl  phase_dependency.bzl  phase_expand_environment.bzl  phase_java_wrapper.bzl  phase_runenvironmentinfo_provider.bzl  phase_scalac_provider.bzl  phase_scalafmt.bzl  phase_semanticdb.bzl  phase_test_environment.bzl  phases.bzl
scala/private/protoc/: protoc_toolchain.bzl
scala/private/rules/: scala_binary.bzl  scala_doc.bzl  scala_junit_test.bzl  scala_library.bzl  scala_repl.bzl  scala_test.bzl
scala/private/toolchain_deps/: toolchain_dep_rules.bzl  toolchain_deps.bzl
scala/scalafmt/: BUILD  phase_scalafmt_ext.bzl  providers.bzl  scalafmt_repositories.bzl
scala/scalafmt/scalafmt/: ScalafmtWorker-2_11.scala  ScalafmtWorker.scala
scala/scalafmt/toolchain/: setup_scalafmt_toolchain.bzl  toolchain.bzl
scala_proto/: BUILD  scala_proto_toolchain.bzl  toolchains.bzl
scala_proto/default/: default_deps.bzl  repositories.bzl
scala_proto/private/: scala_proto_aspect.bzl  toolchain_deps.bzl
scripts/: README.md  create_repository.py  toggle-workspace.sh  update_compiler_sources_integrity.py  update_protoc_integrity.py
scripts/lib/: update_integrity.py
specs2/: specs2.bzl  specs2_junit.bzl
test/: BUILD  EnvAttributeBinary.scala  EnvAttributeTest.scala  check_statsfile.bzl
test/compiler_sources_integrity/: BUILD
test/gen_src/: BUILD
test/jmh/: BUILD
test/plugins/: BUILD
test/proto/custom_generator/: BUILD.bazel
test/proto_cross_repo_boundary/repo/: MODULE.bazel
test/scalac/srcjars/: setup.bzl
test/scalafmt/: .scalafmt.conf  phase_scalafmt_test.bzl
test/semanticdb/: BUILD
test/shell/: test_bzlmod_macros.sh  test_bzlmod_tidy.sh  test_compiler_sources_integrity.sh  test_coverage_equals_in_target.sh  test_coverage_helper.sh  test_coverage_scalatest.sh  test_coverage_scalatest_resources.sh  test_coverage_specs2_with_junit.sh  test_cross_build.sh  test_diagnostics_reporter.sh  test_env_attribute_expansion.sh  test_examples.sh  test_helper.sh  test_misc.sh  test_persistent_worker.sh  test_runner.sh  test_scala_classpath.sh  test_scala_jacocorunner.sh  test_scala_library.sh  test_scalafmt.sh  test_scalafmt_helper.sh  test_semanticdb.sh  test_strict_dependency.sh  test_twitter_scrooge.sh  test_unused_dependency.sh
test/toolchains/: BUILD.bazel  jdk.bzl  setup.bzl
test_cross_build/: .bazelrc  MODULE.bazel  WORKSPACE
test_cross_build/scalafmt/: .scalafmt2.conf  .scalafmt3.conf  BUILD
test_cross_build/version_specific/: BUILD  scala_2_only.scala
test_expect_failure/compiler_dependency_tracker/: BUILD
test_expect_failure/compilers_jvm_flags/: BUILD
test_expect_failure/diagnostics_reporter/: BUILD
test_expect_failure/missing_direct_deps/external_deps/: BUILD
test_expect_failure/missing_direct_deps/filtering/: BUILD
test_expect_failure/missing_direct_deps/internal_deps/: BUILD
test_expect_failure/plus_one_deps/: BUILD.bazel  setup_toolchains.bzl
test_expect_failure/scala_test_jacocorunner/: BUILD
test_expect_failure/scala_test_jvm_flags/: BUILD
test_expect_failure/scalac_jvm_opts/: BUILD
test_expect_failure/scalacopts_from_toolchain/: BUILD
test_expect_failure/unused_dependency_checker/: BUILD
test_version/: MODULE.bazel.template  WORKSPACE.template
test_version/test_reporter/: BUILD
test_version/version_specific_tests_dir/: BUILD  scrooge_repositories.bzl
testing/: BUILD  deps.bzl  junit.bzl  scalatest.bzl  specs2_junit.bzl  testing.bzl
testing/private/: repositories.bzl
testing/toolchain/: BUILD  toolchain.bzl  toolchain_deps.bzl
tools/: bazel.rc.buildkite  sync-bazelversion.sh
twitter_scrooge/: BUILD  twitter_scrooge.bzl
twitter_scrooge/toolchain/: toolchain.bzl
(+17 files in other folders)
