"""Bazel module definition for engflow_platforms"""

module(name = "engflow_platforms", version = "0.0.0")

bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_cc", version = "0.1.0")
bazel_dep(name = "rules_go", version = "0.50.1")

go_sdk = use_extension( "@rules_go//go:extensions.bzl", "go_sdk")

go_sdk.download(version = "1.23.4")
