"""Bazel module ./test/shell/test_examples.sh tests"""

module(name = "cross_build")

bazel_dep(name = "rules_scala")
local_path_override(
    module_name = "rules_scala",
    path = "..",
)

bazel_dep(name = "rules_cc", version = "0.0.9")
single_version_override(
    module_name = "rules_cc",
    version = "0.0.9",
)

scala_config = use_extension(
    "@rules_scala//scala/extensions:config.bzl",
    "scala_config",
)
scala_config.settings(
    scala_version = "3.1.3",
    scala_versions = [
        "2.11.12",
        "2.12.20",
        "2.13.15",
        "3.1.3",
        "3.2.2",
        "3.3.4",
    ],
)
use_repo(scala_config, "io_bazel_rules_scala_config")

scala_deps = use_extension(
    "@rules_scala//scala/extensions:deps.bzl",
    "scala_deps",
)
scala_deps.settings(
    fetch_sources = True,
)
scala_deps.toolchains(
    scalafmt = True,
    scalatest = True,
)

bazel_dep(name = "engflow_platforms", version = "0.0.0", dev_dependency = True)
local_path_override(module_name = "engflow_platforms", path = "../platform")
