"""Bazel module ./test/shell/test_examples.sh tests"""

module(name = "compiler_sources")

bazel_dep(name = "rules_scala", repo_name = "io_bazel_rules_scala")
local_path_override(
    module_name = "rules_scala",
    path = "../..",
)

scala_config = use_extension(
    "@io_bazel_rules_scala//scala/extensions:config.bzl",
    "scala_config",
)
use_repo(scala_config, "io_bazel_rules_scala_config")

