"""Bazel module ./test/shell/test_examples.sh tests"""

module(name = "semanticdb_example")

bazel_dep(name = "rules_scala", repo_name = "io_bazel_rules_scala")
local_path_override(
    module_name = "rules_scala",
    path = "../.."
)

scala_config = use_extension(
    "@io_bazel_rules_scala//scala/extensions:config.bzl",
    "scala_config",
)

scala_config.settings(
    scala_version = "2.13.14",
)

scala_deps = use_extension(
    "@io_bazel_rules_scala//scala/extensions:deps.bzl",
    "scala_deps",
)

scala_deps.settings(
    fetch_sources = True,
)

#Register and use the custom toolchain that has semanticdb enabled
register_toolchains(
    "//:semanticdb_toolchain",
)
