"""Bazel module ./test/shell/test_examples.sh tests"""

module(name = "semanticdb_example")

bazel_dep(name = "rules_scala")
local_path_override(
    module_name = "rules_scala",
    path = "../..",
)

bazel_dep(name = "rules_cc", version = "0.0.9")
single_version_override(
    module_name = "rules_cc",
    version = "0.0.9",
)

scala_config = use_extension(
    "@rules_scala//scala/extensions:config.bzl",
    "scala_config",
)
scala_config.settings(
    scala_version = "2.13.15",
)

scala_deps = use_extension(
    "@rules_scala//scala/extensions:deps.bzl",
    "scala_deps",
)
scala_deps.settings(
    fetch_sources = True,
)

#Register and use the custom toolchain that has semanticdb enabled
register_toolchains(
    "//:semanticdb_toolchain",
)
