load("//scala:scala_toolchain.bzl", "scala_toolchain")

scala_toolchain(
    name = "plus_one_deps",
    dependency_mode = "plus-one",
    visibility = ["//visibility:public"],
)

scala_toolchain(
    name = "plus_one_deps_with_unused_error",
    dependency_mode = "plus-one",
    unused_dependency_checker_mode = "error",
    visibility = ["//visibility:public"],
)
